# paralegal-lk-internship-assignment

./: .gitignore  README.md  extractor.py  main.py  output_handler.py  parser.py  pyproject.toml
